# rust-billing-api

./: Cargo.toml  Rocket.toml  docker-compose.yml
migrations/2021-02-02-194815_create_billing_table/: down.sql  up.sql
src/: main.rs  schema.rs
